Changed the content for user/admin request - Cyrus

--- a/request_page.html
+++ b/request_page.html
@@ -29,7 +29,7 @@
                     <div class="collapse navbar-collapse" id="navcol-1"><span class="navbar-text">Hello, Rob!</span>
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="nav-link" href="admin_page.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="request_page.html">Request History</a></li>
+                            <li class="nav-item"><a class="nav-link" href="request_page.html">Request</a></li>
                             <li class="nav-item"><a class="nav-link" href="validation_page.html">Validation Tables</a></li>
                             <li class="nav-item"><a class="nav-link" href="add_page.html">Add&nbsp;</a></li>
                             <li class="nav-item"><a class="nav-link" href="import_page.html">Import</a></li>
@@ -41,7 +41,7 @@
                 <div class="row my-5">
                     <div class="col-md-4"></div>
                     <div class="col-md-4 page-title">
-                        <h1 class="text-center" style="/*align-self: center;*/">Request History</h1>
+                        <h1 class="text-center" style="/*align-self: center;*/">Request Records</h1>
                     </div>
                     <div class="col-md-4"></div>
                 </div>
@@ -63,12 +63,12 @@
                                 <td>Eleni</td>
                                 <td>Annie</td>
                                 <td>11/01/22</td>
-                                <td><button class="btn" type="button" date-bs-toggle="modal" data-bs-target="#summary"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn" type="button" data-bs-toggle="modal" data-bs-target="#summary"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="#fulfill" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                             <tr>
-                                <td>Suman</td>
-                                <td>Batish</td>
+                                <td>Eleni</td>
+                                <td>Annie</td>
                                 <td>11/02/22</td>
                                 <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="fulfill">Complete</button></td>
@@ -78,56 +78,56 @@
                                 <td>Annie</td>
                                 <td>11/03/22</td>
                                 <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
-                                <td><button class="btn btn-primary table-button" type="button" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
+                                <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="fulfill">Complete</button></td>
                             </tr>
                             <tr>
-                                <td>Suman</td>
-                                <td>Batish</td>
+                                <td>Eleni</td>
+                                <td>Annie</td>
                                 <td>11/04/22</td>
                                 <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="fulfill">Complete</button></td>
                             </tr>
                             <tr>
-                                <td>Cell 1</td>
-                                <td>Cell 2</td>
-                                <td>Cell 3</td>
-                                <td>Cell 4</td>
-                                <td>Cell 5</td>
+                                <td>Cyrus&nbsp;</td>
+                                <td>Ng</td>
+                                <td>11/05/22</td>
+                                <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="fulfill">Complete</button></td>
                             </tr>
                             <tr>
-                                <td>Cell 1</td>
-                                <td>Cell 2</td>
-                                <td>Cell 3</td>
-                                <td>Cell 4</td>
-                                <td>Cell 5</td>
+                                <td>Peter</td>
+                                <td>Bui</td>
+                                <td>11/06/22</td>
+                                <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn btn-primary table-button" type="button" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                             <tr>
-                                <td>Cell 1</td>
-                                <td>Cell 2</td>
-                                <td>Cell 3</td>
-                                <td>Cell 4</td>
-                                <td>Cell 5</td>
+                                <td>Steven</td>
+                                <td>Dang</td>
+                                <td>11/07/22</td>
+                                <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn btn-primary table-button" type="button" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                             <tr>
-                                <td>Cell 1</td>
-                                <td>Cell 2</td>
-                                <td>Cell 3</td>
-                                <td>Cell 4</td>
-                                <td>Cell 5</td>
+                                <td>Scott</td>
+                                <td>Heigl-Yates</td>
+                                <td>11/08/22</td>
+                                <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn btn-primary table-button" type="button" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                             <tr>
-                                <td>Cell 1</td>
-                                <td>Cell 2</td>
-                                <td>Cell 3</td>
-                                <td>Cell 4</td>
-                                <td>Cell 5</td>
+                                <td>Shubh</td>
+                                <td>Patel</td>
+                                <td>11/09/22</td>
+                                <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn btn-primary table-button" type="button" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                             <tr>
-                                <td>Cell 1</td>
-                                <td>Cell 2</td>
-                                <td>Cell 3</td>
-                                <td>Cell 4</td>
-                                <td>Cell 5</td>
+                                <td>Cyrus</td>
+                                <td>Ng</td>
+                                <td>11/10/22</td>
+                                <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn btn-primary table-button" type="button" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                         </tbody>
                     </table>
@@ -152,7 +152,7 @@
                         </div>
                         <div class="modal-body">
                             <hr style="margin-top: 0px;margin-bottom: 8px;">
-                            <p style="margin-bottom: 8px;">Requestee: Weidong Yang<br>Request Date: 10/25/2022<br>Status: Complete&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Summary List:<br></p>
+                            <p style="margin-bottom: 8px;">Requestee: Eleni Annie<br>Request Date: 11/01/2022<br>Status: In Progress&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Summary List:<br></p>
                             <ul style="margin-bottom: 0px;">
                                 <li>Plankton-Zooplankton wm Mount: Cross Quantity: 10<br></li>
                                 <li>Fungus - Zygorhynchus moelleri zygotes Mount: Cross&nbsp;<br>Quantity: 10<br></li>
@@ -171,9 +171,9 @@
                         </div>
                         <div class="modal-body">
                             <hr style="margin-top: 0px;margin-bottom: 8px;">
-                            <p style="margin-bottom: 8px;">To: Eleni Anni<br>Subject: Slides are ready for pick up<br></p>
+                            <p style="margin-bottom: 8px;">To: Eleni Annie<br>Subject: Slides are ready for pick up<br></p>
                             <hr style="margin-top: 8px;margin-bottom: 8px;">
-                            <p style="margin-bottom: 8px;">Request Date: 10/25/2022<br>Summary List:<br></p>
+                            <p style="margin-bottom: 8px;">Request Date: 11/01/2022<br>Summary List:<br></p>
                             <ul style="margin-bottom: 0px;">
                                 <li>Plankton-Zooplankton wm Mount: Cross Quantity: 10<br></li>
                                 <li>Fungus - Zygorhynchus moelleri zygotes Mount: Cross&nbsp;<br>Quantity: 10<br></li>
@@ -182,7 +182,7 @@
                             <hr style="margin-top: 8px;margin-bottom: 0px;">
                         </div>
                         <div class="modal-footer">
-                            <div class="btn-group" role="group" style="margin: 20px;margin-right: 20px;margin-left: 575px;"><button class="btn btn-primary close-button mx-2" type="button" data-bs-dismiss="modal">Cancel</button><button class="btn btn-primary my-button" type="button" data-bs-dismiss="modal">Complete</button></div>
+                            <div class="btn-group" role="group" style="margin: 20px;margin-right: 20px;margin-left: 575px;"><button class="btn btn-primary close-button mx-2" type="button" data-bs-dismiss="modal">Cancel</button><button class="btn btn-primary my-button" type="button" data-bs-dismiss="modal" style="background: var(--bs-green);">Complete</button></div>
                         </div>
                     </div>
                 </div>
