--- a/request_page_user.html
+++ b/request_page_user.html
@@ -61,12 +61,12 @@
                                 <td>Eleni</td>
                                 <td>Annie</td>
                                 <td>11/01/22</td>
-                                <td><button class="btn" type="button" data-bs-toggle="modal" data-bs-target="summary"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn" type="button" data-bs-toggle="modal" data-bs-target="#summary"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="#fulfill" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                             <tr>
-                                <td>Suman</td>
-                                <td>Batish</td>
+                                <td>Eleni</td>
+                                <td>Annie</td>
                                 <td>11/02/22</td>
                                 <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="#fulfill" style="/*background-color: var(--bs-btn-hover-bg);*/">Completed</button></td>
@@ -79,8 +79,8 @@
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="#fulfill" style="/*background-color: var(--bs-btn-hover-bg);*/">Completed</button></td>
                             </tr>
                             <tr>
-                                <td>Suman</td>
-                                <td>Batish</td>
+                                <td>Eleni</td>
+                                <td>Annie</td>
                                 <td>11/04/22</td>
                                 <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="#fulfill" style="/*background-color: var(--bs-btn-hover-bg);*/">Completed</button></td>
@@ -100,7 +100,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="modal fade" role="dialog" tabindex="-1" id="modal-1">
+            <div class="modal fade" role="dialog" tabindex="-1" id="summary">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -108,14 +108,14 @@
                         </div>
                         <div class="modal-body">
                             <hr style="margin-top: 0px;margin-bottom: 8px;">
-                            <p style="margin-bottom: 8px;">Requestee: Weidong Yang<br>Request Date: 10/25/2022<br>Status: Complete&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Summary List:<br></p>
+                            <p style="margin-bottom: 8px;">Requestee: Eleni Annie<br>Request Date: 11/01/2022<br>Status: In Progress&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Summary List:<br></p>
                             <ul style="margin-bottom: 0px;">
                                 <li>Plankton-Zooplankton wm Mount: Cross Quantity: 10<br></li>
                                 <li>Fungus - Zygorhynchus moelleri zygotes Mount: Cross&nbsp;<br>Quantity: 10<br></li>
                             </ul>
                             <hr style="margin-top: 8px;margin-bottom: 0px;">
                         </div>
-                        <div class="modal-footer"><button class="btn btn-primary" type="button" style="background: var(--bs-black);" data-dimiss="modal">Close</button></div>
+                        <div class="modal-footer"><button class="btn btn-primary" type="button" style="background: var(--bs-red);" data-dimiss="modal">Close</button></div>
                     </div>
                 </div>
             </div>
