Validation page changes - shubh

--- a/validation_page.html
+++ b/validation_page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>BioCat-Updated</title>
+    <title>BioCat-Updated (1)</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Advent+Pro:100,200,300,400,500,600,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monda&amp;display=swap">
@@ -29,7 +29,7 @@
                     <div class="collapse navbar-collapse" id="navcol-1"><span class="navbar-text">Hello, Rob!</span>
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="nav-link" href="admin_page.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="request_page.html">Request History</a></li>
+                            <li class="nav-item"><a class="nav-link" href="request_page.html">Request</a></li>
                             <li class="nav-item"><a class="nav-link" href="validation_page.html">Validation Tables</a></li>
                             <li class="nav-item"><a class="nav-link" href="add_page.html">Add&nbsp;</a></li>
                             <li class="nav-item"><a class="nav-link" href="import_page.html">Import</a></li>
@@ -61,23 +61,15 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Prokaryortes</td>
-                                            <td><button class="btn btn-primary" type="button">Active</button></td>
-                                        </tr>
-                                        <tr>
                                             <td>Fungi</td>
-                                            <td><button class="btn btn-primary" type="button">Active</button><br></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Vertebrates</td>
-                                            <td><button class="btn btn-primary" type="button">Active</button></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Invertebrates</td>
                                             <td><button class="btn btn-primary" type="button">Active</button></td>
                                         </tr>
                                         <tr>
                                             <td>Geology</td>
+                                            <td><button class="btn btn-primary" type="button">Active</button><br></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Invertebrates</td>
                                             <td><button class="btn btn-primary" type="button">Active</button></td>
                                         </tr>
                                         <tr>
@@ -85,11 +77,19 @@
                                             <td><button class="btn btn-primary" type="button">Active</button></td>
                                         </tr>
                                         <tr>
+                                            <td>Prokaryotes</td>
+                                            <td><button class="btn btn-primary" type="button">Active</button></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Protists</td>
+                                            <td><button class="btn btn-primary" type="button">Active</button></td>
+                                        </tr>
+                                        <tr>
                                             <td>Protist</td>
                                             <td><button class="btn btn-primary" type="button" style="background-color: var(--bs-btn-disabled-bg);">Inactive</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Protists</td>
+                                            <td>Vertebrates</td>
                                             <td><button class="btn btn-primary" type="button">Active</button></td>
                                         </tr>
                                     </tbody>
@@ -173,6 +173,10 @@
                                     </thead>
                                     <tbody>
                                         <tr>
+                                            <td>Ageis Scientific</td>
+                                            <td><button class="btn btn-primary" type="button">Active</button></td>
+                                        </tr>
+                                        <tr>
                                             <td>Army Medical School</td>
                                             <td><button class="btn btn-primary" type="button">Active</button></td>
                                         </tr>
@@ -197,11 +201,7 @@
                                             <td><button class="btn btn-primary" type="button">Active</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Triarch Inc</td>
-                                            <td><button class="btn btn-primary" type="button">Active</button></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Ageis Scientific</td>
+                                            <td>Triarch Inc.&nbsp;</td>
                                             <td><button class="btn btn-primary" type="button">Active</button></td>
                                         </tr>
                                     </tbody>
@@ -222,11 +222,11 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Whole</td>
+                                            <td>Cross/Transverse</td>
                                             <td><button class="btn btn-primary" type="button">Active</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Cross/Transverse</td>
+                                            <td>Divider</td>
                                             <td><button class="btn btn-primary" type="button">Active</button></td>
                                         </tr>
                                         <tr>
@@ -238,7 +238,15 @@
                                             <td><button class="btn btn-primary" type="button">Active</button></td>
                                         </tr>
                                         <tr>
+                                            <td>Resin Mount</td>
+                                            <td><button class="btn btn-primary" type="button">Active</button></td>
+                                        </tr>
+                                        <tr>
                                             <td>Section (Piece)</td>
+                                            <td><button class="btn btn-primary" type="button">Active</button></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Squash (Mash)</td>
                                             <td><button class="btn btn-primary" type="button">Active</button></td>
                                         </tr>
                                         <tr>
@@ -246,23 +254,15 @@
                                             <td><button class="btn btn-primary" type="button">Active</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Vertical</td>
-                                            <td><button class="btn btn-primary" type="button">Active</button></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Divider</td>
-                                            <td><button class="btn btn-primary" type="button">Active</button></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Squash (mash)</td>
-                                            <td><button class="btn btn-primary" type="button">Active</button></td>
-                                        </tr>
-                                        <tr>
                                             <td>Thin</td>
                                             <td><button class="btn btn-primary" type="button">Active</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Resin mount</td>
+                                            <td>Vertical</td>
+                                            <td><button class="btn btn-primary" type="button">Active</button></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Whole</td>
                                             <td><button class="btn btn-primary" type="button">Active</button></td>
                                         </tr>
                                         <tr></tr>
