--- a/request_form.html
+++ b/request_form.html
@@ -48,10 +48,10 @@
                 <form>
                     <div class="row">
                         <div class="col my-col">
-                            <p style="font-size: 18px;">First Name: Rose</p>
+                            <p style="font-size: 18px;">First Name: Eleni</p>
                         </div>
                         <div class="col my-col">
-                            <p style="font-size: 18px;">Last Name: McGinnis</p>
+                            <p style="font-size: 18px;">Last Name:&nbsp;Annie<br></p>
                         </div>
                     </div>
                     <div class="row">
