--- a/request_page.html
+++ b/request_page.html
@@ -51,8 +51,8 @@
                     <table class="table custom-table">
                         <thead>
                             <tr>
-                                <th>First Name</th>
-                                <th>Last Name</th>
+                                <th>Request ID</th>
+                                <th>Name</th>
                                 <th>Request Date</th>
                                 <th>Summary</th>
                                 <th>Status</th>
@@ -60,74 +60,74 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Eleni</td>
-                                <td>Annie</td>
+                                <td>1</td>
+                                <td>Eleni Annie<br></td>
                                 <td>11/01/22</td>
                                 <td><button class="btn" type="button" date-bs-toggle="modal" data-bs-target="#summary"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="#fulfill" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                             <tr>
-                                <td>Suman</td>
-                                <td>Batish</td>
+                                <td>2</td>
+                                <td>Eleni Annie<br></td>
                                 <td>11/02/22</td>
                                 <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="fulfill">Complete</button></td>
                             </tr>
                             <tr>
-                                <td>Eleni</td>
-                                <td>Annie</td>
+                                <td>3</td>
+                                <td>Eleni Annie<br></td>
                                 <td>11/03/22</td>
                                 <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                             <tr>
-                                <td>Suman</td>
-                                <td>Batish</td>
+                                <td>4</td>
+                                <td>Eleni Annie<br></td>
                                 <td>11/04/22</td>
                                 <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="fulfill">Complete</button></td>
                             </tr>
                             <tr>
-                                <td>Cell 1</td>
-                                <td>Cell 2</td>
-                                <td>Cell 3</td>
-                                <td>Cell 4</td>
-                                <td>Cell 5</td>
+                                <td>5</td>
+                                <td>Cyrus Ng</td>
+                                <td>11/05/22</td>
+                                <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="fulfill">Complete</button></td>
                             </tr>
                             <tr>
-                                <td>Cell 1</td>
-                                <td>Cell 2</td>
-                                <td>Cell 3</td>
-                                <td>Cell 4</td>
-                                <td>Cell 5</td>
+                                <td>6</td>
+                                <td>Peter Bui</td>
+                                <td>11/06/22</td>
+                                <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn btn-primary table-button" type="button" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                             <tr>
-                                <td>Cell 1</td>
-                                <td>Cell 2</td>
-                                <td>Cell 3</td>
-                                <td>Cell 4</td>
-                                <td>Cell 5</td>
+                                <td>7</td>
+                                <td>Steven Dang</td>
+                                <td>11/07/22</td>
+                                <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn btn-primary table-button" type="button" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                             <tr>
-                                <td>Cell 1</td>
-                                <td>Cell 2</td>
-                                <td>Cell 3</td>
-                                <td>Cell 4</td>
-                                <td>Cell 5</td>
+                                <td>8</td>
+                                <td>Scott Heigl-Yates</td>
+                                <td>11/08/22</td>
+                                <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn btn-primary table-button" type="button" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                             <tr>
-                                <td>Cell 1</td>
-                                <td>Cell 2</td>
-                                <td>Cell 3</td>
-                                <td>Cell 4</td>
-                                <td>Cell 5</td>
+                                <td>9</td>
+                                <td>Shubh Patel</td>
+                                <td>11/09/22</td>
+                                <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn btn-primary table-button" type="button" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                             <tr>
-                                <td>Cell 1</td>
-                                <td>Cell 2</td>
-                                <td>Cell 3</td>
-                                <td>Cell 4</td>
-                                <td>Cell 5</td>
+                                <td>10</td>
+                                <td>Cyrus Ng</td>
+                                <td>11/10/22</td>
+                                <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn btn-primary table-button" type="button" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                         </tbody>
                     </table>
@@ -152,7 +152,7 @@
                         </div>
                         <div class="modal-body">
                             <hr style="margin-top: 0px;margin-bottom: 8px;">
-                            <p style="margin-bottom: 8px;">Requestee: Weidong Yang<br>Request Date: 10/25/2022<br>Status: Complete&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Summary List:<br></p>
+                            <p style="margin-bottom: 8px;">Request ID: 1<br>Requestee: Eleni Annie<br>Request Date: 11/01/2022<br>Status: In Progress&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Summary List:<br></p>
                             <ul style="margin-bottom: 0px;">
                                 <li>Plankton-Zooplankton wm Mount: Cross Quantity: 10<br></li>
                                 <li>Fungus - Zygorhynchus moelleri zygotes Mount: Cross&nbsp;<br>Quantity: 10<br></li>
