Updated the content for both request pages

--- a/request_page_user.html
+++ b/request_page_user.html
@@ -49,8 +49,8 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th>Requestee First Name</th>
-                                <th>Requestee Last Name</th>
+                                <th>Request ID</th>
+                                <th>Requestee Name</th>
                                 <th>Request Date</th>
                                 <th>Summary</th>
                                 <th></th>
@@ -58,29 +58,29 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Eleni</td>
-                                <td>Annie</td>
+                                <td>1</td>
+                                <td>Eleni Annie</td>
                                 <td>11/01/22</td>
                                 <td><button class="btn" type="button" data-bs-toggle="modal" data-bs-target="#summary"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="#fulfill" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                             <tr>
-                                <td>Eleni</td>
-                                <td>Annie</td>
+                                <td>2</td>
+                                <td>Eleni Annie<br></td>
                                 <td>11/02/22</td>
                                 <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="#fulfill" style="/*background-color: var(--bs-btn-hover-bg);*/">Completed</button></td>
                             </tr>
                             <tr>
-                                <td>Eleni</td>
-                                <td>Annie</td>
+                                <td>3</td>
+                                <td>Eleni Annie<br></td>
                                 <td>11/03/22</td>
                                 <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="#fulfill" style="/*background-color: var(--bs-btn-hover-bg);*/">Completed</button></td>
                             </tr>
                             <tr>
-                                <td>Eleni</td>
-                                <td>Annie</td>
+                                <td>4</td>
+                                <td>Eleni Annie<br></td>
                                 <td>11/04/22</td>
                                 <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="#fulfill" style="/*background-color: var(--bs-btn-hover-bg);*/">Completed</button></td>
@@ -108,7 +108,7 @@
                         </div>
                         <div class="modal-body">
                             <hr style="margin-top: 0px;margin-bottom: 8px;">
-                            <p style="margin-bottom: 8px;">Requestee: Eleni Annie<br>Request Date: 11/01/2022<br>Status: In Progress&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Summary List:<br></p>
+                            <p style="margin-bottom: 8px;">Request ID: 1<br>Requestee: Eleni Annie<br>Request Date: 11/01/2022<br>Status: In Progress&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Summary List:<br></p>
                             <ul style="margin-bottom: 0px;">
                                 <li>Plankton-Zooplankton wm Mount: Cross Quantity: 10<br></li>
                                 <li>Fungus - Zygorhynchus moelleri zygotes Mount: Cross&nbsp;<br>Quantity: 10<br></li>
