--- a/admin_page.html
+++ b/admin_page.html
@@ -29,11 +29,7 @@
                     <div class="collapse navbar-collapse" id="navcol-1"><span class="navbar-text">Hello, Rob!</span>
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="nav-link" href="admin_page.html">Home</a></li>
-<<<<<<< HEAD
                             <li class="nav-item"><a class="nav-link" href="request_page.html">Request</a></li>
-=======
-                            <li class="nav-item"><a class="nav-link" href="request_page.html">Request History</a></li>
->>>>>>> 5f41f04f7f30e206fd7a97da9cdb188576d8709c
                             <li class="nav-item"><a class="nav-link" href="validation_page.html">Validation Tables</a></li>
                             <li class="nav-item"><a class="nav-link" href="add_page.html">Add&nbsp;</a></li>
                             <li class="nav-item"><a class="nav-link" href="import_page.html">Import</a></li>
@@ -57,21 +53,20 @@
                         </div>
                     </div>
                 </div>
+            </div><div class="container my-5">
+    <div class="row">
+        <div class="col-md-6 col-xl-12">
+            <div class="my-2 my-flex" style="gap: 30px;">
+                <div class="dropdown"><button class="btn btn-primary dropdown-toggle my-dropdown" aria-expanded="false" data-bs-toggle="dropdown" type="button">Category</button>
+                    <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                </div>
+                <div class="dropdown"><button class="btn btn-primary dropdown-toggle my-dropdown" aria-expanded="false" data-bs-toggle="dropdown" type="button">Subcategory</button>
+                    <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                </div>
+                <div class="dropdown"><button class="btn btn-primary dropdown-toggle my-dropdown" aria-expanded="false" data-bs-toggle="dropdown" type="button">Mount Type</button>
+                    <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                </div><button class="btn btn-primary" type="button" style="background-color: var(--bs-green);">Search</button><button class="btn btn-primary my-button" type="button">Reset</button>
             </div>
-            <div class="container my-5">
-                <div class="row">
-                    <div class="col-md-6 col-xl-12">
-                        <div class="my-2 my-flex" style="gap: 30px;">
-                            <div class="dropdown"><button class="btn btn-primary dropdown-toggle my-dropdown" aria-expanded="false" data-bs-toggle="dropdown" type="button">Category</button>
-                                <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                            </div>
-                            <div class="dropdown"><button class="btn btn-primary dropdown-toggle my-dropdown" aria-expanded="false" data-bs-toggle="dropdown" type="button">Subcategory</button>
-                                <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                            </div>
-                            <div class="dropdown"><button class="btn btn-primary dropdown-toggle my-dropdown" aria-expanded="false" data-bs-toggle="dropdown" type="button">Mount Type</button>
-                                <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                            </div><button class="btn btn-primary" type="button" style="background-color: var(--bs-green);">Search</button><button class="btn btn-primary my-button" type="button">Reset</button>
-                        </div>
                         <div class="table-responsive">
                             <table class="table custom-table">
                                 <thead>
@@ -224,21 +219,21 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="my-flex mt-5">
-                            <nav>
-                                <ul class="pagination">
-                                    <li class="page-item"><a class="page-link" aria-label="Previous" href="#"><span aria-hidden="true">«</span></a></li>
-                                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">4</a></li>
-                                    <li class="page-item"><a class="page-link" aria-label="Next" href="#"><span aria-hidden="true">»</span></a></li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
+            <div class="my-flex mt-5">
+                <nav>
+                    <ul class="pagination">
+                        <li class="page-item"><a class="page-link" aria-label="Previous" href="#"><span aria-hidden="true">«</span></a></li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">4</a></li>
+                        <li class="page-item"><a class="page-link" aria-label="Next" href="#"><span aria-hidden="true">»</span></a></li>
+                    </ul>
+                </nav>
             </div>
+        </div>
+    </div>
+</div>
         </div>
         <footer class="text-center" id="footer"><div class="container-fluid py-4">
     <p class="mb-0">Copyright © 2022 BioCat</p>
